k8s/sticky-app/service-sticky-appa.yaml
apiVersion: v1
kind: Service
metadata:
  name: appa-sticky-internal
  labels:
    name: appa-sticky
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: stickyapp
